# qwikee

./: README.md  install.py  mod_manager.py  pyproject.toml  qwikee.py  setup.py
mcmod/: __init__.py  cli.py
