[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwikee"
version = "2.0.0"
description = "Qwikee - Quick Minecraft Mod Installer"
authors = [
    {name = "Diego Gaytan", email = "diegogaytan2000@gmail.com"}
]
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache 2.0 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/DGSENZEN/qwikee"
Repository = "https://github.com/DGSENZEN/qwikee"

[project.scripts]
qwikee = "qwikee:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["qwikee*"]

[tool.setuptools.package-data]
qwikee = ["*.json", "*.yaml", "*.yml"]
